--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
 		<header>
 			<div class="caixa">
-				<h1><img class="img-logo" src="img/logo.jpg"></h1>
+				<h1><img class="img-logo" src="assets/img/logo.jpg"></h1>
 
 				<nav>
 					<ul>
@@ -26,13 +26,13 @@
 			</div>
 		</header>
 
-		<img class="banner" src="img/dae-kids-4.jpg">
+		<img class="banner" src="assets/img/dae-kids-4.jpg">
 
 		<main>
 			<section class="principal">
 				<h2 class="titulo-principal">Ensinando futuros heróis </h2>
 
-				<img class="images" src="img/Menino-Luz-Boca.jpg" alt="menino com lanterna em pelúcia">
+				<img class="images" src="assets/img/Menino-Luz-Boca.jpg" alt="menino com lanterna em pelúcia">
 		 
 				<p>Acreditamos que a formação em saúde é um direito e dever de todos. Queremos fazê-la chegar a toda a comunidade.</p>
 				<p>A magia que nos afeta, faz com que tudo o que façamos seja para proveito daqueles que esperamos que um dia possam ser futuros heróis para eles e para os outros.</p>
@@ -44,7 +44,7 @@
 			<section class="principal">
 				<h2 class="titulo-principal">O que diz a Lei Lucas??</h2>
 
-				<img class="images" src="img/pexels-karolina-grabowska-4386467.jpg" alt="">
+				<img class="images" src="assets/img/pexels-karolina-grabowska-4386467.jpg" alt="">
                 <p>Lei Lucas (13.722/18) foi sancionada dia 04/10/2018. Ela obriga as escolas, públicas e privadas, de educação infantil e básica, a se prepararem para atendimentos de primeiros socorros.</p>
 				<p>As instituições de ensino devem ministrar cursos que capacitem professores e funcionários em noções básicas de primeiros socorros. Tal obrigação se estende aos estabelecimentos de recreação infantil.</p>
 				<p>Segundo a deputada Pollyana Gama, o curso deverá ser ofertado a cada dois anos. E vale ressaltar que haverá penalidades para quem não cumprir a lei. A punição começa pela notificação do descumprimento da lei. Após isso, pode haver multa e até mesmo a cassação do alvará ou responsabilização patrimonial.</p>
@@ -55,7 +55,7 @@
 				<section class="principal">
 					<h2 class="titulo-principal">Lei Lucas: Conheça a história por detrás da lei </h2>
 	
-					<img class="images" src="img/leilucas.jpg" alt="">
+					<img class="images" src="assets/img/leilucas.jpg" alt="">
 			 
 					<p>Lucas Begalli tinha apenas 10 anos quando perdeu a vida em uma excursão da escola que frequentava, em Campinas. Motivo: asfixia mecânica que ocorreu em questão de minutos. Ou seja, ele se engasgou com um pedaço de salsicha do cachorro quente que serviram no lanche. Mas não recebeu os primeiros socorros de forma rápida e adequada. </p>
                     <p>Lucas chegou a transferido em uma UTI móvel para o hospital, mas acabou falecendo. Ele sofreu sete paradas cardíacas em 50 minutos de tentativas de ressuscitação.</p>
@@ -65,7 +65,7 @@
 	
 				<section class="principal">
 					<h2 class="titulo-principal">O que é preciso para garantir mais segurança nas escolas?</h2>
-					<img class="images" src="img/pexels-janko-ferlic-695948.jpg" alt="">
+					<img class="images" src="assets/img/pexels-janko-ferlic-695948.jpg" alt="">
 
 					<p>Além do cumprimento da Lei Lucas, é muito importante que as escolas se equipem com itens de segurança que, em muitos casos, são essenciais para salvar vidas. A prevenção contra problemas inesperados não é apenas saber agir nos primeiros socorros, ela inclui também estar equipado para várias situações que podem se apresentar — principalmente para as emergenciais como uma parada cardíaca — bem como dar estrutura para um atendimento mais rápido.</p>
 					<p>Muitos problemas, principalmente os relacionados ao coração, não dão muita margem de tempo para esperar ajuda. O atendimento deve ser rápido e ágil para aumentar as chances de salvar a vida da vítima. Ter um Desfibrilador Externo Automático (DEA) pode ajudar a salvar vidas em casos de parada cardiorrespiratória até que o atendimento especializado chegue ao local. O socorro nos primeiros minutos pode ser decisivo para a sobrevivência da vítima, sendo assim com um DEA utilizado logo nesses períodos, o paciente tem 90% de chances de sobreviver.</p>
@@ -74,7 +74,7 @@
 		</main>
 
 		<footer>
-			<img class="img-footer" src="img/logo.jpg">
+			<img class="img-footer" src="assets/img/logo.jpg">
 			<p class="copyright">&copy;Pequenos Heróis - 2022</p>
 		</footer>
 	</body>
