--- a/contato.html
+++ b/contato.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/form.css">    
+    <link rel="stylesheet" href="assets/css/style.css">
+       
     <title>Contato - Pequenos Heróis</title>
 </head> 
 
@@ -28,27 +27,52 @@
         </div>
     </header> <br> <br> <br>
 
-    <section class="form">
-        <img class="images" src="" alt="">
-        <form
-          action="https://formsubmit.co/ajax/annecarolineecosta@gmail.com"
-          method="POST"
-          data-form>
-          <label for="nome">Nome</label>
-          <input type="text" name="nome" id="nome" required />
-          <label for="email">E-mail</label>
-          <input type="email" name="email" id="email" required />
-          <label for="mensagem">Mensagem</label>
-          <textarea name="mensagem" id="mensagem" required></textarea>
-          <button type="submit" data-button>Enviar</button>
-        </form>
-    </section>
+        <div class="box">
+            <div class="img-box">
+                <img class="img-box" src="assets/img/kristine-wook-D337PostcEM-unsplash.jpg">
+            </div>
+        <div class="form-box">
+            <h2>Criar Conta</h2>
+            <p> Já é um membro? <a href="#"> Login </a> </p>
+            <form action="#">
+                <div class="input-group">
+                    <label for="nome"> Nome Completo</label>
+                    <input type="text" id="nome" placeholder="Digite o seu nome completo" required>
+                </div>
 
-    <footer>
-        <img class="img-footer" src="img/logo.jpg">
+                <div class="input-group">
+                    <label for="email">E-mail</label>
+                    <input type="email" id="email" placeholder="Digite o seu email" required>
+                </div>
+
+                <div class="input-group">
+                    <label for="telefone">Telefone</label>
+                    <input type="tel" id="telefone" placeholder="Digite o seu telefone" required>
+                </div>
+
+                <div class="input-group w50">
+                    <label for="senha">Senha</label>
+                    <input type="password" id="senha" placeholder="Digite sua senha" required>
+                </div>
+
+                <div class="input-group w50">
+                    <label for="Confirmarsenha">Confirmar Senha</label>
+                    <input type="password" id="Confirmarsenha" placeholder="Confirme a senha" required>
+                </div>
+
+                <div class="input-group">
+                    <button>Cadastrar</button>
+                </div>
+
+                <br> <br>
+
+    <footer class="footer-box">
+        <img class="img-footer" src="assets/img/logo.jpg">
         <p class="copyright">&copy;Pequenos Heróis - 2023</p>
     </footer>
     
 </body>
+
+
 <script defer src="index.js"></script>
 </html>
