--- a/o-que-fazemos.html
+++ b/o-que-fazemos.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>O que nos move - Pequenos Heróis</title>
 </head>
 <body>
     <header>
         <div class="caixa">
-            <h1><img class="img-logo" src="img/logo.jpg"></h1>
+            <h1><img class="img-logo" src="assets/img/logo.jpg"></h1>
 
             <nav>
                 <ul>
@@ -61,7 +59,7 @@
     </section>
 
     <footer>
-        <img class="img-footer" src="img/logo.jpg">
+        <img class="img-footer" src="assets/img/logo.jpg">
         <p class="copyright">&copy;Pequenos Heróis - 2022</p>
     </footer>
 
