--- a/o-que-fazemos.html
+++ b/o-que-fazemos.html
@@ -37,7 +37,7 @@
                 <p>O primeiro socorrista.</p> <br> <br>
                 <li class="itens">1º Aula de anatomia:</li>
                 <p>Quanto melhor conhecer o nosso corpo, melhor vamos tratar.</p>
-            </ul><img src="img/Brincar-a-Reanimar-Coelho.jpg" class="imagem-cursos">
+            </ul><img src="assets/img/Brincar-a-Reanimar-Coelho.jpg" class="imagem-cursos">
         </div>
 
     <section class="cursos">
@@ -49,7 +49,7 @@
                 <li class="itens">Primeiros socorros para profissionais da educação</li>
                 <p>Conforme AHA - American Heart Association.</p> <br> <br>
             
-            </ul><img src="img/manobra1.jpg" class="imagem-cursos">
+            </ul><img src="assets/img/manobra1.jpg" class="imagem-cursos">
         </div>
 
         
