--- a/quem-somos.html
+++ b/quem-somos.html
@@ -31,7 +31,7 @@
 
         <div class="main">
             <div class="container nurse">
-              <img src="/assets/img/anne.png" alt="enfermeira" />
+              <img src="assets/img/anne.png" alt="enfermeira" />
               <div class="nurse-profile-1">
                 <h2 class="display-5">Anne Caroline</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam velit quisquam enim odit id illo ipsam temporibus consectetur tenetur, distinctio deserunt fugiat harum quod nam mollitia, sapiente illum placeat officia.</p>
@@ -53,7 +53,7 @@
                 </p>
                 <p class="about-nurse fw-bold">Denis Fonseca.</p>
               </div>
-              <img src="/assets/img/denis.png" alt="enfermeiro" />
+              <img src="assets/img/denis.png" alt="enfermeiro" />
             </div>
           </div>
         
